[gd_scene load_steps=10 format=4 uid="uid://cqi16uuiory6a"]

[ext_resource type="TileSet" uid="uid://dwjq33gve6fks" path="res://TileSets/BaseTileset.tres" id="1_p8p37"]
[ext_resource type="Script" uid="uid://bgy071o5jbwec" path="res://Rooms/Doors.gd" id="2_t1wpb"]
[ext_resource type="PackedScene" uid="uid://t7ktbcl5debv" path="res://Scenes/WeaponPickup.tscn" id="3_477ix"]
[ext_resource type="PackedScene" uid="uid://dn2dpf0haseiq" path="res://Scenes/Player.tscn" id="4_8a8dd"]
[ext_resource type="PackedScene" uid="uid://didl5ieemco65" path="res://Scenes/Enemy.tscn" id="5_1kmgg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3xonv"]
size = Vector2(64, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dyehu"]
size = Vector2(64, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1k58x"]
size = Vector2(32, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uj1e3"]
size = Vector2(32, 64)

[node name="Room_1" type="Node2D"]

[node name="Layout" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAABAAEAAAAAAAgAAAABAAEAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAABAA8AAAAAAAAAAAACAA8AAAAAAAAAAAADAA8AAAAAAAAAAAAFAA8AAAAAAAAAAAAGAA8AAAAAAAAAAAAHAA8AAAAAAAAAAAAIAA8AAAAAAAAAAAAJAA8AAAAAAAAAAAAKAA8AAAAAAAAAAAALAA8AAAABAAEAAAAMAA8AAAABAAEAAAANAA8AAAAAAAAAAAAOAA8AAAAAAAAAAAAPAA8AAAAAAAAAAAAQAA8AAAAAAAAAAAARAA8AAAAAAAAAAAASAA8AAAAAAAAAAAATAA8AAAAAAAAAAAAUAA8AAAAAAAAAAAAVAA8AAAAAAAAAAAAWAA8AAAAAAAAAAAAXAA8AAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAABAAEAAAAMAAAAAAABAAEAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAAAAAAAAAASAAAAAAAAAAAAAAATAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAAWAAAAAAAAAAAAAAAXAAAAAAAAAAAAAAAXAAEAAAAAAAAAAAAXAAIAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAAAAAAAAAAXAAUAAAAAAAAAAAAXAAYAAAAAAAAAAAAXAAcAAAABAAEAAAAXAAgAAAABAAEAAAAXAAkAAAAAAAAAAAAXAAoAAAAAAAAAAAAXAAsAAAAAAAAAAAAXAAwAAAAAAAAAAAAXAA0AAAAAAAAAAAAXAA4AAAAAAAAAAAAEAA8AAAAAAAAAAAANAAgAAAABAAAAAAANAAcAAAABAAAAAAANAAYAAAABAAAAAAANAAUAAAABAAAAAAANAAQAAAABAAAAAAANAAMAAAABAAAAAAANAAIAAAABAAAAAAANAAEAAAABAAAAAAAMAAEAAAABAAAAAAALAAEAAAABAAAAAAAKAAEAAAABAAAAAAAJAAEAAAABAAAAAAAIAAEAAAABAAAAAAAHAAEAAAABAAAAAAAGAAEAAAABAAAAAAAFAAEAAAABAAAAAAAEAAEAAAABAAAAAAADAAEAAAABAAAAAAACAAEAAAABAAAAAAABAAEAAAABAAAAAAABAAIAAAABAAAAAAABAAMAAAABAAAAAAABAAQAAAABAAAAAAABAAUAAAABAAAAAAABAAYAAAABAAAAAAABAAcAAAABAAAAAAABAAgAAAABAAAAAAABAAkAAAABAAAAAAABAAoAAAABAAAAAAABAAsAAAABAAAAAAABAAwAAAABAAAAAAABAA0AAAABAAAAAAABAA4AAAABAAAAAAACAA4AAAABAAAAAAACAA0AAAABAAAAAAACAAwAAAABAAAAAAACAAsAAAABAAAAAAACAAoAAAABAAAAAAACAAkAAAABAAAAAAACAAgAAAABAAAAAAACAAcAAAABAAAAAAACAAYAAAABAAAAAAACAAUAAAABAAAAAAACAAQAAAABAAAAAAACAAMAAAABAAAAAAACAAIAAAABAAAAAAADAAIAAAABAAAAAAADAAMAAAABAAAAAAADAAQAAAABAAAAAAADAAUAAAABAAAAAAADAAYAAAABAAAAAAADAAcAAAABAAAAAAADAAgAAAABAAAAAAADAAkAAAAAAAEAAAADAAoAAAAAAAEAAAADAAsAAAAAAAEAAAADAAwAAAAAAAEAAAADAA0AAAABAAAAAAADAA4AAAABAAAAAAAEAA4AAAABAAAAAAAEAA0AAAAAAAEAAAAEAAwAAAAAAAEAAAAEAAsAAAAAAAEAAAAEAAoAAAAAAAEAAAAEAAkAAAAAAAEAAAAEAAgAAAABAAAAAAAEAAcAAAABAAAAAAAEAAYAAAABAAAAAAAEAAUAAAABAAAAAAAEAAQAAAABAAAAAAAEAAMAAAABAAAAAAAEAAIAAAABAAAAAAAFAAIAAAABAAAAAAAFAAMAAAABAAAAAAAFAAQAAAABAAAAAAAFAAUAAAABAAAAAAAFAAYAAAABAAAAAAAFAAcAAAABAAAAAAAFAAgAAAAAAAEAAAAFAAkAAAAAAAEAAAAFAAoAAAAAAAEAAAAFAAsAAAAAAAEAAAAFAAwAAAAAAAEAAAAFAA0AAAAAAAEAAAAFAA4AAAABAAAAAAAGAA4AAAABAAAAAAAGAA0AAAAAAAEAAAAGAAwAAAAAAAEAAAAGAAsAAAAAAAEAAAAGAAoAAAAAAAEAAAAGAAkAAAAAAAEAAAAGAAgAAAAAAAEAAAAGAAcAAAABAAAAAAAGAAYAAAABAAAAAAAGAAUAAAABAAAAAAAGAAQAAAABAAAAAAAGAAMAAAABAAAAAAAGAAIAAAABAAAAAAAHAAIAAAABAAAAAAAHAAMAAAABAAAAAAAHAAQAAAABAAAAAAAHAAUAAAABAAAAAAAHAAYAAAABAAAAAAAHAAcAAAABAAAAAAAHAAgAAAABAAAAAAAHAAkAAAAAAAEAAAAHAAoAAAAAAAEAAAAHAAsAAAAAAAEAAAAHAAwAAAAAAAEAAAAHAA0AAAAAAAEAAAAHAA4AAAABAAAAAAAIAA4AAAABAAAAAAAIAA0AAAABAAAAAAAIAAwAAAAAAAEAAAAIAAsAAAAAAAEAAAAIAAoAAAAAAAEAAAAIAAkAAAAAAAEAAAAIAAgAAAABAAAAAAAIAAcAAAABAAAAAAAIAAYAAAABAAAAAAAIAAUAAAABAAAAAAAIAAQAAAABAAAAAAAIAAMAAAABAAAAAAAIAAIAAAABAAAAAAAJAAIAAAABAAAAAAAJAAMAAAABAAAAAAAJAAQAAAABAAAAAAAJAAUAAAABAAAAAAAJAAYAAAABAAAAAAAJAAcAAAABAAAAAAAJAAgAAAABAAAAAAAJAAkAAAABAAAAAAAJAAoAAAAAAAEAAAAJAAsAAAAAAAEAAAAJAAwAAAABAAAAAAAJAA0AAAABAAAAAAAJAA4AAAABAAAAAAAKAA4AAAABAAAAAAAKAA0AAAABAAAAAAAKAAwAAAABAAAAAAAKAAsAAAABAAAAAAAKAAoAAAABAAAAAAAKAAkAAAABAAAAAAAKAAgAAAABAAAAAAAKAAcAAAABAAAAAAAKAAYAAAABAAAAAAAKAAUAAAABAAAAAAAKAAQAAAABAAAAAAAKAAMAAAABAAAAAAAKAAIAAAABAAAAAAALAAIAAAABAAAAAAALAAMAAAABAAAAAAALAAQAAAABAAAAAAALAAUAAAABAAAAAAALAAYAAAABAAAAAAALAAcAAAABAAAAAAALAAgAAAABAAAAAAALAAkAAAABAAAAAAALAAoAAAABAAAAAAALAAsAAAABAAAAAAALAAwAAAABAAAAAAALAA0AAAABAAAAAAALAA4AAAABAAAAAAAMAA4AAAABAAAAAAAMAA0AAAABAAAAAAAMAAwAAAABAAAAAAAMAAsAAAABAAAAAAAMAAoAAAABAAAAAAAMAAkAAAABAAAAAAAMAAgAAAABAAAAAAAMAAcAAAABAAAAAAAMAAYAAAABAAAAAAAMAAUAAAABAAAAAAAMAAQAAAABAAAAAAAMAAMAAAABAAAAAAAMAAIAAAABAAAAAAANAAkAAAABAAAAAAANAAoAAAABAAAAAAANAAsAAAABAAAAAAANAAwAAAABAAAAAAANAA0AAAABAAAAAAANAA4AAAABAAAAAAAOAA4AAAABAAAAAAAOAA0AAAABAAAAAAAOAAwAAAABAAAAAAAOAAsAAAABAAAAAAAOAAoAAAABAAAAAAAOAAkAAAABAAAAAAAOAAgAAAABAAAAAAAOAAcAAAABAAAAAAAOAAYAAAABAAAAAAAOAAUAAAABAAAAAAAOAAQAAAABAAAAAAAOAAMAAAABAAAAAAAOAAIAAAABAAAAAAAOAAEAAAABAAAAAAAPAAEAAAABAAAAAAAPAAIAAAABAAAAAAAPAAMAAAABAAAAAAAPAAQAAAABAAAAAAAPAAUAAAABAAAAAAAPAAYAAAABAAAAAAAPAAcAAAABAAAAAAAPAAgAAAABAAAAAAAPAAkAAAABAAAAAAAPAAoAAAABAAAAAAAPAAsAAAABAAAAAAAPAAwAAAAAAAEAAAAPAA0AAAAAAAEAAAAPAA4AAAAAAAEAAAAQAA4AAAAAAAEAAAAQAA0AAAAAAAEAAAAQAAwAAAAAAAEAAAAQAAsAAAAAAAEAAAAQAAkAAAABAAAAAAAQAAgAAAABAAAAAAAQAAcAAAABAAAAAAAQAAYAAAABAAAAAAAQAAUAAAABAAAAAAAQAAQAAAABAAAAAAAQAAMAAAABAAAAAAAQAAIAAAABAAAAAAAQAAEAAAABAAAAAAARAAEAAAABAAAAAAARAAIAAAABAAAAAAARAAMAAAABAAAAAAARAAQAAAABAAAAAAARAAUAAAABAAAAAAARAAYAAAABAAAAAAARAAcAAAABAAAAAAARAAgAAAABAAAAAAARAAkAAAABAAAAAAARAAoAAAAAAAEAAAARAAsAAAAAAAEAAAARAAwAAAAAAAEAAAARAA0AAAAAAAEAAAARAA4AAAAAAAEAAAASAA4AAAAAAAEAAAASAA0AAAAAAAEAAAASAAwAAAAAAAEAAAASAAsAAAAAAAEAAAASAAoAAAAAAAEAAAASAAkAAAAAAAEAAAASAAgAAAABAAAAAAASAAcAAAABAAAAAAASAAYAAAABAAAAAAASAAUAAAABAAAAAAASAAQAAAABAAAAAAASAAMAAAABAAAAAAASAAIAAAABAAAAAAASAAEAAAABAAAAAAATAAEAAAABAAAAAAATAAIAAAABAAAAAAATAAMAAAABAAAAAAATAAQAAAABAAAAAAATAAUAAAABAAAAAAATAAYAAAABAAAAAAATAAcAAAABAAAAAAATAAgAAAABAAAAAAATAAkAAAAAAAEAAAATAAoAAAAAAAEAAAATAAsAAAAAAAEAAAATAAwAAAAAAAEAAAATAA0AAAAAAAEAAAATAA4AAAAAAAEAAAAUAA4AAAAAAAEAAAAUAA0AAAAAAAEAAAAUAAwAAAAAAAEAAAAUAAsAAAAAAAEAAAAUAAoAAAAAAAEAAAAUAAkAAAAAAAEAAAAUAAgAAAABAAAAAAAUAAcAAAABAAAAAAAUAAYAAAABAAAAAAAUAAUAAAABAAAAAAAUAAQAAAABAAAAAAAUAAMAAAABAAAAAAAUAAIAAAABAAAAAAAUAAEAAAABAAAAAAAVAAEAAAABAAAAAAAVAAIAAAABAAAAAAAVAAMAAAABAAAAAAAVAAQAAAABAAAAAAAVAAUAAAABAAAAAAAVAAYAAAABAAAAAAAVAAcAAAABAAAAAAAVAAgAAAABAAAAAAAVAAkAAAAAAAEAAAAVAAoAAAAAAAEAAAAVAAsAAAAAAAEAAAAVAAwAAAAAAAEAAAAVAA0AAAAAAAEAAAAVAA4AAAAAAAEAAAAWAA4AAAAAAAEAAAAWAA0AAAAAAAEAAAAWAAwAAAAAAAEAAAAWAAsAAAAAAAEAAAAWAAoAAAAAAAEAAAAWAAkAAAAAAAEAAAAWAAgAAAABAAAAAAAWAAcAAAABAAAAAAAWAAYAAAABAAAAAAAWAAUAAAABAAAAAAAWAAQAAAABAAAAAAAWAAMAAAABAAAAAAAWAAIAAAABAAAAAAAWAAEAAAABAAAAAAAQAAoAAAAAAAEAAAA=")
tile_set = ExtResource("1_p8p37")

[node name="Doors" type="Node2D" parent="."]
script = ExtResource("2_t1wpb")

[node name="DoorUp" type="Area2D" parent="Doors"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/DoorUp"]
position = Vector2(384, 16)
shape = SubResource("RectangleShape2D_3xonv")

[node name="DoorDown" type="Area2D" parent="Doors"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/DoorDown"]
position = Vector2(384, 496)
rotation = 3.1415927
shape = SubResource("RectangleShape2D_dyehu")

[node name="DoorLeft" type="Area2D" parent="Doors"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/DoorLeft"]
position = Vector2(16, 256)
shape = SubResource("RectangleShape2D_1k58x")

[node name="DoorRight" type="Area2D" parent="Doors"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/DoorRight"]
position = Vector2(752, 256)
rotation = 3.1415927
shape = SubResource("RectangleShape2D_uj1e3")

[node name="WeaponPickup" parent="Doors" instance=ExtResource("3_477ix")]
position = Vector2(392, 234)

[node name="Player" parent="." instance=ExtResource("4_8a8dd")]
position = Vector2(212, 206)

[node name="Enemy" parent="." instance=ExtResource("5_1kmgg")]
position = Vector2(318, 163)
